--- a/views/exam.ejs
+++ b/views/exam.ejs
@@ -6,6 +6,13 @@
     <title>Ispiti</title>
 </head>
 <body>
-    <p> <%= exams %> </p>
+    <% if(exams.length == 0) { %>
+        <p>Nema polozenih ispita</p>
+    <% } else {%>
+        <h3>Polozeni ispiti za studenta: <%= exams[0].student.name %> <%= exams[0].student.surname %></h3>
+        <% for(let e of exams) { %>
+        <p> <%= e.subject %> : <%= e.grade %> </p>
+        <% }%>
+    <% }%>
 </body>
 </html>
